RESOLVED FIXED151404
FTL OSR Exits that are exception handlers should not have two different entrances. Instead, we should have two discrete OSR exits that do different things.
https://bugs.webkit.org/show_bug.cgi?id=151404
Summary FTL OSR Exits that are exception handlers should not have two different entra...
Saam Barati
Reported 2015-11-18 14:02:43 PST
...
Attachments
patch (25.30 KB, patch)
2015-11-30 16:30 PST, Saam Barati
fpizlo: review+
Saam Barati
Comment 1 2015-11-30 16:30:25 PST
Saam Barati
Comment 2 2015-11-30 16:41:45 PST
Comment on attachment 266298 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=266298&action=review > Source/JavaScriptCore/ftl/FTLExceptionHandlerManager.cpp:95 > auto findResult = m_map.find(stackmapRecordIndex); > if (findResult == m_map.end()) These should be m_callOperationMap and I've changed to that locally.
Saam Barati
Comment 3 2015-11-30 16:55:59 PST
Note You need to log in before you can comment on or make changes to this bug.