Source/JavaScriptCore/ftl/FTLExceptionHandlerManager.h
@@ -54,14 +54,14 @@ public:
     ExceptionHandlerManager(State& state);
 
     void addNewExit(uint32_t stackmapRecordIndex, size_t osrExitIndex);
+    void addNewCallOperationExit(uint32_t stackmapRecordIndex, size_t osrExitIndex);
 
     // These functions only make sense to be called after we've generated the OSR
     // exit thunks and allocated the OSR exit thunks' link buffer.
     CodeLocationLabel callOperationExceptionTarget(uint32_t stackmapRecordIndex);
     CodeLocationLabel lazySlowPathExceptionTarget(uint32_t stackmapRecordIndex);
 
-    OSRExit* getByIdOSRExit(uint32_t stackmapRecordIndex);
-    OSRExit* subOSRExit(uint32_t stackmapRecordIndex);
+    OSRExit* callOperationOSRExit(uint32_t stackmapRecordIndex);
     OSRExit* getCallOSRExit(uint32_t stackmapRecordIndex, const JSCall&);
     OSRExit* getCallOSRExit(uint32_t stackmapRecordIndex, const JSTailCall&);
     OSRExit* getCallOSRExit(uint32_t stackmapRecordIndex, const JSCallVarargs&);
@@ -78,6 +78,7 @@ private:
     State& m_state;
     typedef HashMap<uint32_t, size_t, WTF::IntHash<uint32_t>, WTF::UnsignedWithZeroKeyHashTraits<uint32_t>> RecordIndexToOSRExitIndexMap;
     RecordIndexToOSRExitIndexMap m_map;
+    RecordIndexToOSRExitIndexMap m_callOperationMap;
 };
 
 } } // namespace JSC::FTL
