Source/JavaScriptCore/ftl/FTLOSRExitCompilationInfo.h
@@ -39,7 +39,6 @@ struct OSRExitCompilationInfo {
     }
     
     MacroAssembler::Label m_thunkLabel;
-    MacroAssembler::Label m_callOperationExceptionOSRExitEntrance;
     MacroAssembler::PatchableJump m_thunkJump;
     CodeLocationLabel m_thunkAddress;
 };
